scrollbar fix

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -383,6 +383,7 @@ body {
   }
   img {
     max-width: 100%;
+    margin: .5rem 0;
     @for $i from 1 through 10 {
       &.X#{$i} { width: 10% * $i; }
     }
